@@ -4,4 +4,4 @@
 debian/debhelper/dh_apache2		/usr/bin
 debian/debhelper/apache2.pm		/usr/share/perl5/Debian/Debhelper/Sequence/
 debian/debhelper/postinst-apache2	/usr/share/debhelper/autoscripts/
-debian/debhelper/postrm-apache2		/usr/share/debhelper/autoscripts/
+debian/debhelper/prerm-apache2		/usr/share/debhelper/autoscripts/
