@@ -1,4 +1,4 @@
-if [ "$1" = "purge" ] || [ "$1" = "remove" ] ; then
+if [ "$1" = "remove" ] || [ "$1" = "deconfigure" ] ; then
 	if #CONDITIONAL_VARIABLE#; then
 		if [ -e /usr/share/apache2/apache2-maintscript-helper ] ; then
 			. /usr/share/apache2/apache2-maintscript-helper
